# geoapi

./: .flake8  .gitignore  README.en.md  README.md  app.py  docker-compose.yml  pyproject.toml
api/: __init__.py  celeryconfig.py  config.py  geoserver.py  logger.py  marshal.py  utils.py
api/geoserver/: __init__.py  core.py  endpoints.py  marshal.py  tasks.py
api/status/: __init__.py  core.py  endpoints.py
api/styles/: core.py  endpoints.py  marshal.py
docker/argenmap/: Dockerfile  data.json
docker/celery/: Dockerfile  startup.sh
docker/geoapi/: Dockerfile  startup.sh
docker/geoserver/: Dockerfile  workspace-setup.sh
docker/poetry-env/: Dockerfile
docker/postgis/: Dockerfile
etc/: config.py  settings.docker.toml  settings.example.toml
etc/estilos/: estilo-base-azul.sld  estilo-base-blanco.sld  estilo-base-rojo.sld  estilo-base-verde.sld
etc/styles/: estilo-base-amarillo.sld  estilo-base-azul.sld  estilo-base-blanco.sld  estilo-base-rojo.sld  estilo-base-verde.sld  estilo-base-violeta.sld
models/: tables.py
models/alembic/: env.py
models/alembic/versions/: 8c54fbb3ebc4_migración_inicial.py
namespaces/geoserver/: core.py  endpoints.py  marshal.py
namespaces/status/: endpoints.py  marshal.py
src/: alembic.ini  app.py
src/api/: __init__.py  celery.py  celeryconfig.py  logger.py  utils.py
src/api/geoserver/: __init__.py  core.py  endpoints.py  marshal.py  tasks.py
src/api/postgis/: __init__.py  core.py  endpoints.py  marshal.py  tasks.py
src/api/status/: __init__.py  core.py  endpoints.py
src/api/styles/: __init__.py  core.py  endpoints.py  marshal.py
src/models/: tables.py
src/utils/: config.py  general.py  geoserver_interface.py  kml_interface.py  postgis_interface.py  sld_interface.py
utils/: geoserver_interface.py  kml_interface.py  postgis_interface.py  sld_interface.py
(+4 files in other folders)
