[tool.poetry]
name = "geoapi"
version = "0.1.0"
description = "Una interfaz web simplificada para la administración de capas de wms.minhabitat.gob.ar"
authors = ["Leandro Rocamora"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask-restx = "^1.1.0"
isort = "^5.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
