[tool.poetry]
name = "geoapi"
version = "0.1.0"
description = "Una interfaz web simplificada para la administración de capas de wms.minhabitat.gob.ar"
authors = ["Leandro Rocamora"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-restx = "^1.1.0"
isort = "^5.12.0"
black = "^23.3.0"
geopandas = "^0.12.2"
flake8 = "^6.0.0"
toml = "^0.10.2"
requests = "^2.28.2"
psycopg2 = "^2.9.6"
geoalchemy2 = "^0.13.2"
sqlalchemy = "^1.4.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

