[tool.poetry]
name = "geoapi"
version = "0.1.0"
description = "Una interfaz web simplificada para la administración de capas de wms."
authors = ["Leandro Rocamora"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-restx = "^1.1.0"
isort = "^5.12.0"
black = "^23.3.0"
geopandas = "^0.12.2"
flake8 = "^6.0.0"
toml = "^0.10.2"
requests = "^2.28.2"
sqlalchemy = "^1.4.39"
alembic = "^1.10.4"
geoalchemy2 = "^0.10.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
celery = "^5.2.7"
redis = "^4.5.5"
psycopg2-binary = "^2.9.6"
certifi = "^2023.7.22"
werkzeug = "^2.3.8"
urllib3 = "^2.0.7"
jinja2 = "^3.1.3"
pandas = "<2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88

